--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -5,7 +5,7 @@
 <PageTitle>Game Store</PageTitle>
 
 <div class="mt-2">
-  <a class="btn btn-primary" role="button" href="/editGame">New Game</a>
+  <a class="btn btn-primary" role="button" href="/editgame">New Game</a>
 </div>
 
 @if(games is null)
