--- a/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore.Frontend/Components/Pages/Home.razor
@@ -27,11 +27,18 @@ else
         @foreach (var game in games)
         {
           <tr>
-              <td>@game.Id</td>
-              <td>@game.Name</td>
-              <td>@game.Genre</td>
-              <td class="text-center">@game.Price.ToString("C2")</td>
-              <td>@game.ReleaseDate</td>
+            <td>@game.Id</td>
+            <td>@game.Name</td>
+            <td>@game.Genre</td>
+            <td class="text-center">@game.Price.ToString("C2")</td>
+            <td>@game.ReleaseDate</td>
+            <td>
+              <div>
+                  <a class="btn btn-primary me-2" role="button" href="@GameUrl(game.Id)">
+                    <i class="bi bi-pencil-square"></i>
+                  </a>
+              </div>
+            </td>
           </tr>
         }
     </tbody>
@@ -39,10 +46,11 @@ else
 }
 @code {
 
-    @* private GameClient client = new();  *@
     private GameSummary[]? games;
     protected override void OnInitialized()
     {
         games = Client.GetGames();
     }
+
+    private static string GameUrl(int id) => $"/editgame/{id}";
 }
